...
        .ignoresSafeArea(edges: .top)
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ToolbarItem(placement: .topBarTrailing) {
                HStack(spacing: 16) {
                    Button { toggle(listType: .favorite) } label: {
                        Image(systemName: isSaved(as: .favorite) ? "heart.fill" : "heart")
                            .foregroundStyle(isSaved(as: .favorite) ? .red : .primary)
                    }
                    Button { toggle(listType: .watchlist) } label: {
                        Image(systemName: isSaved(as: .watchlist) ? "bookmark.fill" : "bookmark")
                            .foregroundStyle(isSaved(as: .watchlist) ? .blue : .primary)
                    }
...
